# inker

./: .env.example  Cargo.toml  README.md  apply_derives.py  inker.sh
.github/workflows/: ci.yml  release.yml
crates/entities/: Cargo.toml
crates/entities/src/: block.rs  lib.rs  note.rs  oauth2.rs  password.rs  prelude.rs  refresh_tokens.rs  sea_orm_active_enums.rs  user.rs
crates/http/: Cargo.toml
crates/http/src/: config.rs  lib.rs  main.rs  openapi.rs  printer.rs  responses.rs
crates/http/src/errors/: auth_errors.rs  base_errors.rs  mod.rs  notes_errors.rs  youtube_errors.rs
crates/http/src/routes/: extractors.rs  mod.rs
crates/http/src/routes/auth/: handler.rs  mod.rs  models.rs  provider.rs  security.rs  verify_user.rs
crates/http/src/routes/interactive/: events.rs  mod.rs  yt_websocket.rs
crates/http/src/routes/notes/: mod.rs  models.rs  notes_handler.rs
crates/http/src/routes/notes/stream/: events.rs  mod.rs  websocket.rs
crates/http/tests/: common.rs  fake_data.rs  mod.rs
crates/http/tests/auth_tests/: login.rs  mod.rs  signup.rs
crates/http/tests/notes_tests/: blocks.rs  mod.rs  notes.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251202_201145_notes.rs
crates/ml-processing/: Cargo.toml
crates/ml-processing/src/: lib.rs  models.rs
crates/yt-processing/: Cargo.toml
crates/yt-processing/src/: lib.rs
frontend/: .gitignore  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/interactive/yt/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/notes/[id]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: auth-divider.tsx  auth-error.tsx  auth-footer.tsx  auth-layout.tsx  form-input.tsx  index.ts  oauth-buttons.tsx  submit-button.tsx
frontend/src/components/editor/: block-editor.tsx  block-renderer.tsx  divider-block.tsx  document-editor.tsx  image-block.tsx  index.ts  slash-command-menu.tsx  text-block.tsx  todo-block.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx  logo.tsx  modal.tsx  spinner.tsx  textarea.tsx
frontend/src/lib/: api-config.ts  editor-types.ts
resources/: user_agent_regexes.yaml
